[gd_scene load_steps=9 format=4 uid="uid://c15pc0op7r80c"]

[ext_resource type="Script" path="res://src/scripts/level1_bar_a.gd" id="1_rgbcl"]
[ext_resource type="PackedScene" uid="uid://cmeplvg6yvaib" path="res://src/scenes/entities/player.tscn" id="2_rgbcl"]
[ext_resource type="Texture2D" uid="uid://dxtfdy0ucbprg" path="res://_assets/art/tileset/interior_tileset_01.png" id="2_xpuxo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a6m8b"]
texture = ExtResource("2_xpuxo")
texture_region_size = Vector2i(256, 256)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 45, 19.5, 10, -20.5, 8, -128, 47)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, 89.5, 113, 65.5, 83, -1.5, 59, -52.5, 11, -128, 4)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, -128, -128, -128, 128, -89.5, 113, -65.5, 83, -6.5, 51, 63.5, -9, 109.5, -88)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, 89.5, 113, 65.5, 83, 6.5, 51, -63.5, -9, -109.5, -88)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, -128, -128, -128, 128, -89.5, 113, -65.5, 83, 1.5, 59, 52.5, 11, 128, 4)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 116.5, -95, 128, -51, 7.5, 128, -6.5, 128, -128, -50, -113.5, -89)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 10.442772, -101.60529, -62.938843, -42.33555, -108.661224, 28.223694, -128, 128)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, -128, -128, -10.442772, -101.60529, 62.938843, -42.33555, 108.661224, 28.223694, 128, 128)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, -128, -128, -128, 65.54776, 77.06293, 63.7762, 112.49414, 83.26338, 128, 128)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(36.317017, -128, 128, -128, 128, 128, 36.317017, 128)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, 31.5, 128, -2.5, 32.5, -95.5, -25.5)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(128, -128, -128, -128, -128, 128, -31.5, 128, 2.5, 32.5, 95.5, -25.5)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-36.317017, -128, -128, -128, -128, 128, -36.317017, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 65.54776, -77.06293, 63.7762, -112.49414, 83.26338, -128, 128)

[sub_resource type="TileSet" id="TileSet_gxt7v"]
tile_size = Vector2i(256, 256)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_a6m8b")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rgbcl"]
size = Vector2(256, 384)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2j7jn"]
size = Vector2(256, 384)

[sub_resource type="LabelSettings" id="LabelSettings_rgbcl"]
font_size = 200

[node name="Level1_bar_a" type="Node2D"]
script = ExtResource("1_rgbcl")

[node name="Background" type="ColorRect" parent="."]
offset_left = -2048.0
offset_top = -3584.0
offset_right = 9216.0
offset_bottom = 5888.0
color = Color(0.15, 0.15, 0.15, 1)

[node name="Nivel_256" type="TileMapLayer" parent="."]
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AAACAAMAAAAAAAEAAAADAAMAAAAAAAEAAAAEAAMAAAAAAAEAAAAFAAMAAAAAAAEAAAAGAAMAAAAAAAEAAAAHAAMAAAADAAEAAAAGAAQAAAAAAAIAAAAGAAUAAAABAAIAAAAGAAYAAAAAAAIAAAAGAAcAAAABAAIAAAAGAAgAAAAAAAIAAAAGAAkAAAABAAIAAAAFAAQAAAAAAAIAAAAFAAUAAAABAAIAAAAFAAYAAAAAAAIAAAAFAAcAAAABAAIAAAAFAAgAAAAAAAIAAAAFAAkAAAABAAIAAAAEAAQAAAAAAAIAAAAEAAUAAAABAAIAAAAEAAYAAAAAAAIAAAAEAAcAAAABAAIAAAAEAAgAAAAAAAIAAAAEAAkAAAABAAIAAAADAAQAAAAAAAIAAAADAAUAAAABAAIAAAADAAYAAAAAAAIAAAADAAcAAAABAAIAAAADAAgAAAAAAAIAAAADAAkAAAABAAIAAAACAAQAAAAAAAIAAAACAAUAAAABAAIAAAACAAYAAAAAAAIAAAACAAcAAAABAAIAAAACAAgAAAAAAAIAAAACAAkAAAABAAIAAAABAAQAAAAAAAIAAAABAAUAAAABAAIAAAABAAYAAAAAAAIAAAABAAcAAAABAAIAAAABAAgAAAAAAAIAAAABAAkAAAABAAIAAAAAAAQAAAAAAAIAAAAAAAUAAAABAAIAAAAAAAYAAAAAAAIAAAAAAAcAAAABAAIAAAAAAAgAAAAAAAIAAAAAAAkAAAABAAIAAAABAAMAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAPv/AAAAAAIAAAAAAPz/AAABAAIAAAAAAP3/AAAAAAIAAAAAAP7/AAABAAIAAAAAAP//AAAAAAIAAAAAAAAAAAABAAIAAAABAPv/AAAAAAIAAAABAPz/AAABAAIAAAABAP3/AAAAAAIAAAABAP7/AAABAAIAAAABAP//AAAAAAIAAAABAAAAAAABAAIAAAACAPv/AAAAAAIAAAACAPz/AAABAAIAAAACAP3/AAAAAAIAAAACAP7/AAABAAIAAAACAP//AAAAAAIAAAACAAAAAAABAAIAAAADAPv/AAAAAAIAAAADAPz/AAABAAIAAAADAP3/AAAAAAIAAAADAP7/AAABAAIAAAADAP//AAAAAAIAAAADAAAAAAABAAIAAAAEAPv/AAAAAAIAAAAEAPz/AAABAAIAAAAEAP3/AAAAAAIAAAAEAP7/AAABAAIAAAAEAP//AAAAAAIAAAAEAAAAAAABAAIAAAAFAPv/AAAAAAIAAAAFAPz/AAABAAIAAAAFAP3/AAAAAAIAAAAFAP7/AAABAAIAAAAFAP//AAAAAAIAAAAFAAAAAAABAAIAAAAGAPv/AAAAAAIAAAAGAPz/AAABAAIAAAAGAP3/AAAAAAIAAAAGAP7/AAABAAIAAAAGAP//AAAAAAIAAAAGAAAAAAABAAIAAAAAAAEAAAABAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAACAAEAAAAIAAEAAAADAAEAAAAJAAMAAAAEAAEAAAAKAAMAAAADAAEAAAAMAAMAAAAEAAEAAAANAAMAAAADAAEAAAAPAAMAAAAEAAEAAAAQAAMAAAADAAEAAAASAAMAAAAEAAEAAAATAAMAAAADAAEAAAAIAAUAAAADAAEAAAAHAAUAAAAAAAEAAAAHAAYAAAADAAEAAAALAAUAAAAGAAEAAAAOAAUAAAAGAAEAAAARAAUAAAAGAAEAAAAWAPv/AAAAAAIAAAAWAPz/AAABAAIAAAAWAP3/AAAAAAIAAAAWAP7/AAABAAIAAAAWAP//AAAAAAIAAAAWAAAAAAABAAIAAAAWAAEAAAABAAEAAAAWAAMAAAAAAAEAAAAWAAQAAAAAAAIAAAAWAAUAAAABAAIAAAAWAAYAAAAAAAIAAAAWAAcAAAABAAIAAAAWAAgAAAAAAAIAAAAWAAkAAAABAAIAAAAXAPv/AAAAAAIAAAAXAPz/AAABAAIAAAAXAP3/AAAAAAIAAAAXAP7/AAABAAIAAAAXAP//AAAAAAIAAAAXAAAAAAABAAIAAAAXAAEAAAABAAEAAAAXAAMAAAAAAAEAAAAXAAQAAAAAAAIAAAAXAAUAAAABAAIAAAAXAAYAAAAAAAIAAAAXAAcAAAABAAIAAAAXAAgAAAAAAAIAAAAXAAkAAAABAAIAAAAYAPv/AAAAAAIAAAAYAPz/AAABAAIAAAAYAP3/AAAAAAIAAAAYAP7/AAABAAIAAAAYAP//AAAAAAIAAAAYAAAAAAABAAIAAAAYAAEAAAABAAEAAAAYAAMAAAAAAAEAAAAYAAQAAAAAAAIAAAAYAAUAAAABAAIAAAAYAAYAAAAAAAIAAAAYAAcAAAABAAIAAAAYAAgAAAAAAAIAAAAYAAkAAAABAAIAAAAZAPv/AAAAAAIAAAAZAPz/AAABAAIAAAAZAP3/AAAAAAIAAAAZAP7/AAABAAIAAAAZAP//AAAAAAIAAAAZAAAAAAABAAIAAAAZAAEAAAABAAEAAAAZAAMAAAAAAAEAAAAZAAQAAAAAAAIAAAAZAAUAAAABAAIAAAAZAAYAAAAAAAIAAAAZAAcAAAABAAIAAAAZAAgAAAAAAAIAAAAZAAkAAAABAAIAAAAaAPv/AAAAAAIAAAAaAPz/AAABAAIAAAAaAP3/AAAAAAIAAAAaAP7/AAABAAIAAAAaAP//AAAAAAIAAAAaAAAAAAABAAIAAAAaAAEAAAABAAEAAAAaAAMAAAAAAAEAAAAaAAQAAAAAAAIAAAAaAAUAAAABAAIAAAAaAAYAAAAAAAIAAAAaAAcAAAABAAIAAAAaAAgAAAAAAAIAAAAaAAkAAAABAAIAAAAbAPv/AAAAAAIAAAAbAPz/AAABAAIAAAAbAP3/AAAAAAIAAAAbAP7/AAABAAIAAAAbAP//AAAAAAIAAAAbAAAAAAABAAIAAAAbAAEAAAABAAEAAAAbAAMAAAAAAAEAAAAbAAQAAAAAAAIAAAAbAAUAAAABAAIAAAAbAAYAAAAAAAIAAAAbAAcAAAABAAIAAAAbAAgAAAAAAAIAAAAbAAkAAAABAAIAAAAcAAEAAAABAAEAAAAcAAMAAAAAAAEAAAAcAAUAAAABAAIAAAAcAAYAAAAAAAIAAAAcAPv/AAAAAAIAAAAcAPz/AAABAAIAAAAcAP3/AAAAAAIAAAAcAP7/AAABAAIAAAAcAP//AAAAAAIAAAAcAAAAAAABAAIAAAAcAAQAAAAAAAIAAAAcAAcAAAABAAIAAAAcAAgAAAAAAAIAAAAcAAkAAAABAAIAAAAVAAEAAAACAAEAABAUAAEAAAAEAAEAAAAVAAMAAAAEAAEAAAAUAAUAAAAEAAEAAAAVAAUAAAAAAAEAAAAVAAYAAAAEAAEAAAAJAAcAAAAEAAEAAAATAAcAAAADAAEAAAAKAAcAAAAFAAEAAAASAAcAAAACAAEAAAALAAcAAAABAAEAAAAMAAcAAAABAAEAAAANAAcAAAABAAEAAAAOAAcAAAAAAAEAAAAPAAcAAAABAAEAAAAQAAcAAAABAAEAAAARAAcAAAABAAEAAAAOAAgAAAAAAAIAAAAOAAkAAAABAAIAAAAOAAoAAAABAAEAAAAJAAwAAAAEAAEAAAAKAAwAAAAFAAEAAAALAAwAAAABAAEAAAAMAAwAAAABAAEAAAANAAwAAAABAAEAAAATAAwAAAAEAAEAABASAAwAAAAFAAEAABARAAwAAAABAAEAAAAQAAwAAAABAAEAAAAPAAwAAAABAAEAAAAOAAwAAAABAAEAAAAQAAoAAAAFAAEAAAAPAAoAAAACAAEAAAAHAA8AAAAAAAEAAAAIAA8AAAAAAAEAAAAJAA8AAAAAAAEAAAAKAA8AAAAFAAEAAAALAA8AAAAFAAEAABAMAA8AAAAAAAEAAAANAA8AAAAFAAEAAAAOAA8AAAABAAEAAAAPAA8AAAACAAEAAAAQAA8AAAAAAAEAAAARAA8AAAAFAAEAAAASAA8AAAAFAAEAABATAA8AAAAAAAEAAAAUAA8AAAAAAAEAAAAVAA8AAAAAAAEAAAAWAAoAAAAAAAIAAAAWAAsAAAABAAIAAAAWAAwAAAAAAAIAAAAWAA0AAAABAAIAAAAXAAoAAAAAAAIAAAAXAAsAAAABAAIAAAAXAAwAAAAAAAIAAAAXAA0AAAABAAIAAAAYAAoAAAAAAAIAAAAYAAsAAAABAAIAAAAYAAwAAAAAAAIAAAAYAA0AAAABAAIAAAAZAAoAAAAAAAIAAAAZAAsAAAABAAIAAAAZAAwAAAAAAAIAAAAZAA0AAAABAAIAAAAaAAoAAAAAAAIAAAAaAAsAAAABAAIAAAAaAAwAAAAAAAIAAAAaAA0AAAABAAIAAAAbAAoAAAAAAAIAAAAbAAsAAAABAAIAAAAbAAwAAAAAAAIAAAAbAA0AAAABAAIAAAAcAAoAAAAAAAIAAAAcAAsAAAABAAIAAAAcAAwAAAAAAAIAAAAcAA0AAAABAAIAAAAWAA4AAAAAAAIAAAAWAA8AAAABAAIAAAAWABAAAAAAAAIAAAAWABEAAAABAAIAAAAXAA4AAAAAAAIAAAAXAA8AAAABAAIAAAAXABAAAAAAAAIAAAAXABEAAAABAAIAAAAYAA4AAAAAAAIAAAAYAA8AAAABAAIAAAAYABAAAAAAAAIAAAAYABEAAAABAAIAAAAZAA4AAAAAAAIAAAAZAA8AAAABAAIAAAAZABAAAAAAAAIAAAAZABEAAAABAAIAAAAaAA4AAAAAAAIAAAAaAA8AAAABAAIAAAAaABAAAAAAAAIAAAAaABEAAAABAAIAAAAbAA4AAAAAAAIAAAAbAA8AAAABAAIAAAAbABAAAAAAAAIAAAAbABEAAAABAAIAAAAcAA4AAAAAAAIAAAAcAA8AAAABAAIAAAAcABAAAAAAAAIAAAAcABEAAAABAAIAAAAAAAoAAAAAAAIAAAAAAAsAAAABAAIAAAAAAAwAAAAAAAIAAAAAAA0AAAABAAIAAAABAAoAAAAAAAIAAAABAAsAAAABAAIAAAABAAwAAAAAAAIAAAABAA0AAAABAAIAAAACAAoAAAAAAAIAAAACAAsAAAABAAIAAAACAAwAAAAAAAIAAAACAA0AAAABAAIAAAADAAoAAAAAAAIAAAADAAsAAAABAAIAAAADAAwAAAAAAAIAAAADAA0AAAABAAIAAAAEAAoAAAAAAAIAAAAEAAsAAAABAAIAAAAEAAwAAAAAAAIAAAAEAA0AAAABAAIAAAAFAAoAAAAAAAIAAAAFAAsAAAABAAIAAAAFAAwAAAAAAAIAAAAFAA0AAAABAAIAAAAGAAoAAAAAAAIAAAAGAAsAAAABAAIAAAAGAAwAAAAAAAIAAAAGAA0AAAABAAIAAAAAAA4AAAAAAAIAAAAAAA8AAAABAAIAAAAAABAAAAAAAAIAAAAAABEAAAABAAIAAAABAA4AAAAAAAIAAAABAA8AAAABAAIAAAABABAAAAAAAAIAAAABABEAAAABAAIAAAACAA4AAAAAAAIAAAACAA8AAAABAAIAAAACABAAAAAAAAIAAAACABEAAAABAAIAAAADAA4AAAAAAAIAAAADAA8AAAABAAIAAAADABAAAAAAAAIAAAADABEAAAABAAIAAAAEAA4AAAAAAAIAAAAEAA8AAAABAAIAAAAEABAAAAAAAAIAAAAEABEAAAABAAIAAAAFAA4AAAAAAAIAAAAFAA8AAAABAAIAAAAFABAAAAAAAAIAAAAFABEAAAABAAIAAAAGAA4AAAAAAAIAAAAGAA8AAAABAAIAAAAGABAAAAAAAAIAAAAGABEAAAABAAIAAAAAABIAAAAAAAIAAAAAABMAAAABAAIAAAAAABQAAAAAAAIAAAAAABUAAAABAAIAAAABABIAAAAAAAIAAAABABMAAAABAAIAAAABABQAAAAAAAIAAAABABUAAAABAAIAAAACABIAAAAAAAIAAAACABMAAAABAAIAAAACABQAAAAAAAIAAAACABUAAAABAAIAAAADABIAAAAAAAIAAAADABMAAAABAAIAAAADABQAAAAAAAIAAAADABUAAAABAAIAAAAEABIAAAAAAAIAAAAEABMAAAABAAIAAAAEABQAAAAAAAIAAAAEABUAAAABAAIAAAAFABIAAAAAAAIAAAAFABMAAAABAAIAAAAFABQAAAAAAAIAAAAFABUAAAABAAIAAAAGABIAAAAAAAIAAAAGABMAAAABAAIAAAAGABQAAAAAAAIAAAAGABUAAAABAAIAAAAWABIAAAAAAAIAAAAWABMAAAABAAIAAAAWABQAAAAAAAIAAAAWABUAAAABAAIAAAAXABIAAAAAAAIAAAAXABMAAAABAAIAAAAXABQAAAAAAAIAAAAXABUAAAABAAIAAAAYABIAAAAAAAIAAAAYABMAAAABAAIAAAAYABQAAAAAAAIAAAAYABUAAAABAAIAAAAZABIAAAAAAAIAAAAZABMAAAABAAIAAAAZABQAAAAAAAIAAAAZABUAAAABAAIAAAAaABIAAAAAAAIAAAAaABMAAAABAAIAAAAaABQAAAAAAAIAAAAaABUAAAABAAIAAAAbABIAAAAAAAIAAAAbABMAAAABAAIAAAAbABQAAAAAAAIAAAAbABUAAAABAAIAAAAcABIAAAAAAAIAAAAcABMAAAABAAIAAAAcABQAAAAAAAIAAAAcABUAAAABAAIAAAAMABAAAAAAAAIAAAAMABEAAAABAAIAAAAMABIAAAAAAAIAAAAMABMAAAABAAIAAAAMABQAAAAAAAIAAAAMABUAAAABAAIAAAAQABAAAAAAAAIAAAAQABEAAAABAAIAAAAQABIAAAAAAAIAAAAQABMAAAABAAIAAAAQABQAAAAAAAIAAAAQABUAAAABAAIAAAATABAAAAAAAAIAAAATABEAAAABAAIAAAATABIAAAAAAAIAAAATABMAAAABAAIAAAATABQAAAAAAAIAAAATABUAAAABAAIAAAAJABAAAAAAAAIAAAAJABEAAAABAAIAAAAJABIAAAAAAAIAAAAJABMAAAABAAIAAAAJABQAAAAAAAIAAAAJABUAAAABAAIAAAAHAA0AAAAGAAEAAAAVAA0AAAAGAAEAAAAHAAsAAAAGAAEAAAAVAAsAAAAGAAEAAAATAAoAAAACAAEAAAAHAAkAAAAGAAEAAAAVAAkAAAAGAAEAAAALAAEAAAAGAAEAAAAOAAEAAAAGAAEAAAARAAEAAAAGAAEAAAAMAP7/AAAGAAEAAAAQAP7/AAAGAAEAAAAOAPz/AAAGAAEAAAAJAPz/AAAGAAEAAAAIAPn/AAADAAEAAAAHAPn/AAAEAAEAAAAQAPn/AAACAAEAAAARAPn/AAADAAEAAAAGAPn/AAAAAAIAAAAGAPr/AAABAAIAAAAWAPn/AAAAAAIAAAAWAPr/AAABAAIAAAAKAPn/AAAEAAEAAAALAPn/AAAFAAEAAAAMAPn/AAABAAEAAAANAPn/AAABAAEAAAAOAPn/AAABAAEAAAAPAPn/AAABAAEAAAAGAPb/AAAAAAEAAAAHAPb/AAAFAAEAAAAIAPb/AAABAAEAAAAJAPb/AAABAAEAAAAKAPb/AAABAAEAAAALAPb/AAABAAEAAAAMAPb/AAABAAEAAAANAPb/AAABAAEAAAAOAPb/AAABAAEAAAAPAPb/AAABAAEAAAAQAPb/AAABAAEAAAARAPb/AAABAAEAAAASAPb/AAABAAEAAAATAPb/AAABAAEAAAAUAPb/AAABAAEAAAAFAPb/AAAAAAEAAAAEAPb/AAAAAAEAAAADAPb/AAAAAAEAAAACAPb/AAAAAAEAAAAbAPb/AAAAAAEAAAAcAPb/AAAAAAEAAAAAAPb/AAAAAAEAAAAAAPX/AAAAAAEAADABAPX/AAAAAAEAADACAPX/AAAAAAEAADADAPX/AAAAAAEAADAEAPX/AAAAAAEAADAFAPX/AAAAAAEAADAGAPX/AAAAAAEAADAHAPX/AAAAAAEAADAIAPX/AAAAAAEAADAJAPX/AAAAAAEAADAKAPX/AAAAAAEAADALAPX/AAAAAAEAADAMAPX/AAAAAAEAADANAPX/AAAAAAEAADAOAPX/AAAAAAEAADAPAPX/AAAAAAEAADAQAPX/AAAAAAEAADARAPX/AAAAAAEAADASAPX/AAAAAAEAADATAPX/AAAAAAEAADAUAPX/AAAAAAEAADAVAPX/AAAAAAEAADAWAPX/AAAAAAEAADAXAPX/AAAAAAEAADAYAPX/AAAAAAEAADAZAPX/AAAAAAEAADAaAPX/AAAAAAEAADAbAPX/AAAAAAEAADAcAPX/AAAAAAEAADAAAPT/AAAAAAEAAAABAPT/AAAAAAEAAAACAPT/AAAAAAEAAAADAPT/AAAAAAEAAAAEAPT/AAAAAAEAAAAFAPT/AAAAAAEAAAAGAPT/AAAAAAEAAAAHAPT/AAAAAAEAAAAIAPT/AAAAAAEAAAAJAPT/AAAAAAEAAAAKAPT/AAAAAAEAAAALAPT/AAAAAAEAAAAMAPT/AAAAAAEAAAANAPT/AAAAAAEAAAAOAPT/AAAAAAEAAAAPAPT/AAAAAAEAAAAQAPT/AAAAAAEAAAARAPT/AAAAAAEAAAASAPT/AAAAAAEAAAATAPT/AAAAAAEAAAAUAPT/AAAAAAEAAAAVAPT/AAAAAAEAAAAWAPT/AAAAAAEAAAAXAPT/AAAAAAEAAAAYAPT/AAAAAAEAAAAZAPT/AAAAAAEAAAAaAPT/AAAAAAEAAAAbAPT/AAAAAAEAAAAcAPT/AAAAAAEAAAAAAPf/AAAAAAIAAAAAAPj/AAABAAIAAAAAAPn/AAAAAAIAAAAAAPr/AAABAAIAAAABAPn/AAAAAAIAAAABAPr/AAABAAIAAAACAPn/AAAAAAIAAAACAPr/AAABAAIAAAADAPn/AAAAAAIAAAADAPr/AAABAAIAAAAEAPn/AAAAAAIAAAAEAPr/AAABAAIAAAAFAPn/AAAAAAIAAAAFAPr/AAABAAIAAAABAPf/AAAAAAIAAAABAPj/AAABAAIAAAACAPf/AAAAAAIAAAACAPj/AAABAAIAAAADAPf/AAAAAAIAAAADAPj/AAABAAIAAAAEAPf/AAAAAAIAAAAEAPj/AAABAAIAAAAFAPf/AAAAAAIAAAAFAPj/AAABAAIAAAAGAPf/AAAAAAIAAAAGAPj/AAABAAIAAAAWAPf/AAAAAAIAAAAWAPj/AAABAAIAAAAXAPf/AAAAAAIAAAAXAPj/AAABAAIAAAAYAPf/AAAAAAIAAAAYAPj/AAABAAIAAAAZAPf/AAAAAAIAAAAZAPj/AAABAAIAAAAaAPf/AAAAAAIAAAAaAPj/AAABAAIAAAAbAPf/AAAAAAIAAAAbAPj/AAABAAIAAAAXAPn/AAAAAAIAAAAXAPr/AAABAAIAAAAYAPn/AAAAAAIAAAAYAPr/AAABAAIAAAAZAPn/AAAAAAIAAAAZAPr/AAABAAIAAAAaAPn/AAAAAAIAAAAaAPr/AAABAAIAAAAbAPn/AAAAAAIAAAAbAPr/AAABAAIAAAAcAPn/AAAAAAIAAAAcAPr/AAABAAIAAAAcAPf/AAAAAAIAAAAcAPj/AAABAAIAAAAVAPb/AAACAAEAAAAWAPb/AAAAAAEAAAAXAPb/AAAAAAEAAAAYAPb/AAAAAAEAAAAZAPb/AAAAAAEAAAAaAPb/AAAAAAEAAAABAPb/AAAAAAEAAAATAP3/AAAGAAEAAAAVAPz/AAAEAAEAAAANAAoAAAAFAAEAAAAMAAoAAAAEAAEAAAAKAAoAAAAGAAEAAAASAAoAAAAFAAEAAAARAAoAAAACAAEAAAAUAAoAAAADAAEAAAAMAA0AAAAGAAEAACAMAA4AAAABAAIAAAAVAPj/AAAGAAEAAAA=")
tile_set = SubResource("TileSet_gxt7v")

[node name="Player" parent="." instance=ExtResource("2_rgbcl")]
position = Vector2(1344, 640)

[node name="Portal_1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal_1"]
position = Vector2(896, 576)
shape = SubResource("RectangleShape2D_rgbcl")

[node name="Marker2D" type="Marker2D" parent="Portal_1"]
position = Vector2(1216, 640)

[node name="Portal2a3" type="Area2D" parent="."]
position = Vector2(-9, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal2a3"]
position = Vector2(6537, 576)
shape = SubResource("RectangleShape2D_2j7jn")

[node name="Marker2D" type="Marker2D" parent="Portal2a3"]
position = Vector2(4692, 537)

[node name="SECCION" type="Label" parent="."]
offset_left = 3200.0
offset_top = -3456.0
offset_right = 4019.0
offset_bottom = -3183.0
text = "THE BAR"
label_settings = SubResource("LabelSettings_rgbcl")

[connection signal="body_entered" from="Portal_1" to="." method="_on_portal_1a_2_body_entered"]
[connection signal="body_entered" from="Portal2a3" to="." method="_on_portal_2a_3_body_entered"]
